Fix "Section Header" top whitespace
It is better to control top whitespace in `main` element.

--- a/_section-header.scss
+++ b/_section-header.scss
@@ -3,7 +3,6 @@ main {
   > article,
   > section {
     h1 {
-      margin-top: (($margin-primary-heading + em($line-height-default) + $margin-mini) / $ratio-section-header);
       position: relative;
 
       &::after {
@@ -23,10 +22,7 @@ main {
       }
 
       @media (min-width: $breakpoint-full) {
-        margin-top: ($margin-primary-heading / $ratio-section-header);
-
         &::after {
-          margin-top: 0;
           height: em($ratio-section-header * $line-height-heading);
         }
       }
